# Blumix-Edge

./: .sparkleshare  Blumix-Edge  README.md  SparkleShare.txt
Blumix-Border-Elementario/metacity-1/: metacity-theme-3.xml
Blumix-Edge/: Create-Unity-Buttons_From-Metacity.sh~  README.md
Blumix-Edge/References/Adwaita-git-master/backgrounds/: Makefile.am  adwaita-timed.xml.in
Blumix-Edge/References/Adwaita-git-master/gtk-3.0/: adwaita_engine.c  gnome-applications.css  gtk-main.css  gtk-widgets-backgrounds.css  gtk-widgets.css
Blumix-Edge/References/Adwaita-git-master/metacity-1/: metacity-theme-3.xml
Blumix-Edge/References/Evolve/gtk-3.0/: gtk-widgets-assets.css  gtk-widgets.css
Blumix-Edge/References/LinhKoi/gtk-2.0/: gtkrc
Blumix-Edge/References/LinhKoi/gtk-3.0/: gtk-widgets-assets.css  gtk-widgets.css
Blumix-Edge/References/Lion_gtk_Kmilo/gtk-3.0/: button.css  gtk-widgets.css  sidebar.css
Blumix-Edge/References/Uncomplicated/: change-log.txt  leeme.txt  readme.txt  texturas-instrucciones.txt  textures-instructions.txt
Blumix-Edge/References/wfpaisa-Plane-Gtk3-White-96b0d9f/: README.md
Blumix-Edge/gnome-shell/: elegance-colors-exported.ini  gnome-shell-3.8.css  gnome-shell.css
Blumix-Edge/gnome-shell-old3.8/: gnome-shell (shadow).css  panel_old
Blumix-Edge/gtk-2-back/: gtkrc_usando_uncomplicated
Blumix-Edge/gtk-2.0/: aux-gtkrc-for-columns  gtkrc  gtkrc_sc
Blumix-Edge/gtk-3.0/: gtk-buttons.css  gtk-widgets.css  gtk.css
Blumix-Edge/gtk-3.0/apps/: gnome-applications.css  unity.css
Blumix-Edge/metacity-1/: metacity-theme-3.xml
(+64 files in other folders)
